[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://graphics/powerups/bombpowerup.png" type="Texture" id=2]
[ext_resource path="res://graphics/powerups/lifepowerup.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/vegur/Vegur-Regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = SubResource( 1 )

[node name="hud" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Bomb1" type="Sprite" parent="."]
position = Vector2( 19.0307, 494.633 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Bomb2" type="Sprite" parent="."]
position = Vector2( 42.0192, 494.633 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Bomb3" type="Sprite" parent="."]
position = Vector2( 65.0139, 494.633 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Bomb4" type="Sprite" parent="."]
position = Vector2( 88.0139, 494.633 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Bomb5" type="Sprite" parent="."]
position = Vector2( 111.014, 494.633 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Life1" type="Sprite" parent="."]
position = Vector2( 22.7667, 23.3825 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Life2" type="Sprite" parent="."]
position = Vector2( 45.7667, 23.3825 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Life3" type="Sprite" parent="."]
position = Vector2( 68.7667, 23.3825 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="."]
margin_left = 155.0
margin_top = -4.0
margin_right = 279.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "Score: 000000"
valign = 1

